fixed social on mobile

--- a/src/app/layout/mobile-navigation/index.css
+++ b/src/app/layout/mobile-navigation/index.css
@@ -58,7 +58,10 @@
     flex-direction: column;
     align-items: center;
     overflow-x: scroll;
-    border: 1px solid black;
+
+    @media (min-width: 412px) {
+      border: 1px solid black;
+    }
 
     &::-webkit-scrollbar {
       width: 0 !important;
@@ -91,6 +94,7 @@
 
   &__social {
     width: 100%;
+    min-height: 120px;
     padding: 4rem 0;
     display: flex;
     justify-content: center;
